Thu Nov  6 12:53:46 2003  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/examples/LoadBalancing/server.cpp:
          Added a include to OS.h to fix a compile error.

Thu Nov  6 07:04:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Queued_Message.h:
          Added #include ace/os_include/os_stddef.h to get size_t

Wed Nov  5 19:19:08 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/PollableC.cpp:
	* tao/PollableC.h:
	* tao/PollableC.i:

	  Regenerated the code.

	* tao/Synch_Reply_Dispatcher.cpp:
	* tao/DynamicInterface/DII_Reply_Dispatcher.cpp:
	* tao/Messaging/Asynch_Reply_Dispatcher.cpp:

	  Added debugging statements to indicate failure of clone_from ()
	  when debugging level is cranked up.

	* tao/Remote_Invocation.cpp:
	* tao/Synch_Invocation.cpp:
	* tao/Messaging/Asynch_Reply_Dispatcher.cpp (handle_timeout):

	  Changed the completion status of the CORBA::TIMEOUT exception
	  thrown. For example returning a completion status of
	  COMPLETED_NO while timing out waiting for the reply seems brain
	  dead. Further fixed the minor code to return the SEND_MINOR_CODE
	  or RECV_MINOR_CODE as the case maybe.

	  This fixes a problem reported by Torsten Kuepper
	  <torsten.kuepper@nokia.com> [BUG 1600].

Wed Nov 5 16:03:08 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* orbsvcs/orbsvcs/AV/SCTP_SEQ.h:
	* orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp:

	  Added the change_qos (...) method to
	  TAO_AV_SCTP_SEQ_Flow_Handler in order to set the specified
	  Diffserv Codepoint on the data packets sent.

Wed Nov  5 09:56:26 2003  Chris Cleeland  <cleeland_c@ociweb.com>

	* tao/ORB_Core.cpp (run): Removed 'int' declaration to prevent
	  obscuring the 'result' variable.  The reason this is important
	  is because, by obscuring the 'result' variable, the true return
	  value of Reactor::handle_events() never got returned, and the
	  caller (typically ORB_Core::run) couldn't tell why handle_events
	  exited even though it wants to.
